linuxmuster-linbo (2.3.0-36) babo62; urgency=low

  * initramfs.conf: fixed linbo_gui32 path.
  * updated to xenial build environment, build process consolidation.
  * updated to lts kernel 4.4.14.
  * linbo_cmd.sh: modified ctorrent options for performance tests.
  * adding REANNOUNCE_INTERVAL=60 to bittorrent options.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 28 Jun 2016 19:23:15 +0200

linuxmuster-linbo (2.3.0-35) babo62; urgency=low

  * linbo_cmd.sh:
    - Fixed utf8 encoding of special chars.
    - Fixed console message if no windows reactivation data could be downloaded.
    - Added fstype as cli parameter.
    - reworked syncl(), fixed bootloader stuff (closes #572).
    - reworked restore_winact().

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 25 Jun 2016 14:22:52 +0200

linuxmuster-linbo (2.3.0-34) babo-testing; urgency=low

  * Merge pull request #59 from Kistelini/feature/grub2:
    Fix encoding of linbo_cmd.sh (broken umlauts etc.),
    http://bit.ly/1ZK4Uhz

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 12 May 2016 21:19:29 +0200

linuxmuster-linbo (2.3.0-33) babo-testing; urgency=low

  * postinst: wallpaper fix, do not overwrite custom boot wallpaper.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 12 May 2016 10:13:44 +0200

linuxmuster-linbo (2.3.0-32) babo-testing; urgency=low

  * Merge pull request #58 from linuxmuster/fix-495
    https://github.com/linuxmuster/linuxmuster-linbo/pull/58
  * Merge pull request #57 from linuxmuster/fix/mmc-efiboot
    https://github.com/linuxmuster/linuxmuster-linbo/pull/57
  * Merge pull request #56 from linuxmuster/feature/battery
    https://github.com/linuxmuster/linuxmuster-linbo/pull/56
  * ntfs-3g updatet to 2016.2.22.
  * On PXE boot try to load group specific grub config first from server.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 10 May 2016 22:28:35 +0200

linuxmuster-linbo (2.3.0-31) babo-testing; urgency=low
